# TraceX

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  install_tracex.sh  pyproject.toml  requirements.txt  sample_data_generator.py  setup.py
extractor/: archive_handler.py  db_manager.py  file_discovery.py  ip_extractor.py  main.py  webapp.py
extractor/static/: index.html
sample_data/: file1.txt
sample_data/subdir/: file3.txt
