[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracex"
version = "1.0.0"
description = "TraceX: FastAPI-based web app for extracting IPs and hashes from files and archives"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "requests",
    "pydantic",
    "sqlalchemy"
]

[tool.setuptools.packages.find]
where = ["extractor"]

[tool.setuptools.package-data]
"" = ["static/*", "static/**/*", "sample_data/*", "sample_data/**/*"] 